k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/redis/6-sts-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: itsystems-lab
spec:
  serviceName: redis
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: docker-local.artifactory.medimpact.com/dockerhub/redis:6.2.7-alpine
        imagePullPolicy: IfNotPresent
        command: ["redis-server"]
        args: ["/etc/redis/redis.conf"]
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - if [ $(redis-cli -p 6379 -a "dok2maiNahX%" ping) != "PONG" ]; then exit 1;fi
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - if [ $(redis-cli -p 6379 -a "dok2maiNahX%" ping) != "PONG" ]; then exit 1;fi
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits:
            cpu: "1"
            memory: 500Mi
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - name: data
          mountPath: /data
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      - name: config
        configMap:
          name: redis-config
      securityContext:
        runAsUser: 999
        fsGroup: 999
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
       - ReadWriteOnce
      storageClassName: mi-disk
      resources:
        requests:
          storage: 1Gi
  updateStrategy:
    type: RollingUpdate
