k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/redis/7-sts-sentinel.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel
  namespace: itsystems-lab
spec:
  serviceName: sentinel
  replicas: 3
  selector:
    matchLabels:
      app: sentinel
  template:
    metadata:
      labels:
        app: sentinel
    spec:
      containers:
      - name: sentinel
        image: docker-local.artifactory.medimpact.com/dockerhub/redis:6.2.7-alpine
        imagePullPolicy: IfNotPresent
        command: ["redis-sentinel"]
        args: ["/etc/redis/sentinel.conf"]
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - if [ $(redis-cli -p 26379 ping) != "PONG" ]; then exit 1;fi
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - if [ $(redis-cli -p 26379 ping) != "PONG" ]; then exit 1;fi
          failureThreshold: 3
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 26379
          name: sentinel
        resources:
          limits:
            cpu: "1"
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: redis-config
          mountPath: /etc/redis/
      volumes:
      - name: redis-config
        emptyDir: {}
      securityContext:
        runAsUser: 999
  updateStrategy:
    type: RollingUpdate
