k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/redis/4-svc-redis-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: itsystems-lab
spec:
  clusterIP: None
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    appProtocol: redis
  selector:
    app: redis
