k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/redis/5-svc-sentinel-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinel
  namespace: itsystems-lab
spec:
  clusterIP: None
  ports:
  - name: sentinel
    port: 26379
    targetPort: 26379
    appProtocol: redis
  selector:
    app: sentinel
